--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,16 @@
     "@tanstack/react-router": "1.19.1",
     "axios": "1.7.4",
     "form-data": "4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet-ant-path": "^1.3.0",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "7.49.3",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-ant-path": "^1.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.1",
