--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "form-data": "4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-ant-path": "^1.3.0",
+    "lodash": "^4.17.21",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +36,7 @@
     "@playwright/test": "^1.45.2",
     "@tanstack/router-devtools": "1.19.1",
     "@tanstack/router-vite-plugin": "1.19.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
