--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@playwright/test": "^1.45.2",
     "@tanstack/router-devtools": "1.19.1",
     "@tanstack/router-vite-plugin": "1.19.0",
+    "@types/leaflet": "^1.9.17",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.37",
